--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,24 +1,11 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "rwsdk-minimal-starter",
+  "name": "rwsdk-jsx-stream",
   "main": "src/worker.tsx",
-  "compatibility_date": "2025-09-07",
+  "compatibility_date": "2025-09-24",
+  "preview_urls": true,
   "compatibility_flags": ["nodejs_compat"],
   "observability": {
     "enabled": true
-  },
-  "durable_objects": {
-    "bindings": [
-      {
-        "name": "REALTIME_DURABLE_OBJECT",
-        "class_name": "RealtimeDurableObject"
-      }
-    ]
-  },
-  "migrations": [
-    {
-      "tag": "v1",
-      "new_classes": ["RealtimeDurableObject"]
-    }
-  ]
+  }
 }
